# hiclaw

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.ja-JP.md  README.md  README.zh-CN.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-base.yml  build-rc.yml  build.yml  deploy-helm-to-oss.yml  helm-lint.yml  release.yml  test-controller.yml  (+2 more)
blog/: hiclaw-1.0.4-release.md  hiclaw-announcement.md  hiclaw-k8s-native-multi-agent-collaboration.md
changelog/: current.md  v1.0.1.md  v1.0.2.md  v1.0.3.md  v1.0.5.md  v1.0.6.md  v1.0.8.md
copaw/: AGENTS.md  Dockerfile  pyproject.toml
copaw/scripts/: copaw-worker-entrypoint.sh  patch_agentscope_lazy.py  patch_agentscope_runtime_lazy.py  patch_reme_lazy.py
copaw/src/copaw_worker/: bridge.py  cli.py  config.py  matrix_channel.py  sync.py  worker.py
copaw/src/copaw_worker/templates/: agent.manager.json  agent.worker.json  config.json
copaw/src/matrix/: README.md  __init__.py  channel.py
copaw/tests/: test_bridge.py  test_channel_mention.py
docker-proxy/: Dockerfile  go.mod  main.go  security.go  security_test.go
docs/: agent-pod-template.md  architecture.md  cms-integration.md  development.md  faq.md  import-worker.md  quickstart.md  windows-deploy.md  worker-guide.md
fastclaw/: Dockerfile  README.md  requirements.txt
hack/: kind-config.yaml  local-k8s-down.sh  local-k8s-up.sh  mirror-images.sh
hermes/: Dockerfile  README.md  pyproject.toml
hermes/scripts/: hermes-worker-entrypoint.sh
hermes/src/hermes_matrix/: __init__.py  _shim.py  adapter.py  overlay_adapter.py  policies.py
hermes/src/hermes_worker/: __init__.py  bridge.py  cli.py  config.py  sync.py  worker.py
hermes/tests/: test_bridge.py  test_policies.py
hiclaw-controller/: Dockerfile  Dockerfile.embedded  Makefile  go.mod  go.sum  supervisord.embedded.conf
install/: README.md  hiclaw-apply.sh  hiclaw-import.ps1  hiclaw-import.sh  hiclaw-install.ps1  hiclaw-install.sh  hiclaw-verify.sh
manager/: Dockerfile  Dockerfile.aliyun  Dockerfile.copaw  README.md  supervisord.conf
nanoclaw/: Dockerfile
openclaw-base/: Dockerfile
openfang/: README.md
scripts/: export-debug-log.py
tests/: README.md  run-all-tests.sh  test-01-manager-boot.sh  test-02-create-worker.sh  test-03-assign-task.sh  test-04-human-intervene.sh  test-05-heartbeat.sh  test-06-multi-worker.sh  test-08-github-mcp.sh  test-09-github-collab.sh  test-10-mcp-permission.sh  test-100-cleanup.sh  test-11-github-pr-collab.sh  test-12-github-mcp-tools.sh  test-13-git-delegation.sh  test-14-git-collab.sh  test-15-import-worker-zip.sh  test-16-import-worker-package-default.sh  test-17-worker-config-verify.sh  test-18-team-config-verify.sh  test-19-human-and-team-admin.sh  test-20-inline-worker-config.sh  test-21-team-project-dag.sh
worker/: Dockerfile  README.md
zeroclaw/: Cargo.toml  Dockerfile  README.md
zeroclaw/src/: config.rs  higress.rs  main.rs  matrix.rs  skills.rs
(+312 files in other folders)
