[package]
name = "zeroclaw"
version = "0.1.0"
edition = "2021"
description = "ZeroClaw - Ultra-lightweight high-performance Rust AI Agent Worker for HiClaw"
license = "Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Matrix SDK
matrix-sdk = { version = "0.7", features = ["anyhow"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Futures
futures = "0.3"

# WASM support (optional, for plugin system)
# wasm-bindgen = "0.2"  # Uncomment if WASM support is enabled

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
